--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Cabin+Condensed:wght@400;500;600;700&family=Cabin+Sketch:wght@400;700&family=Lobster&family=Lobster+Two:ital,wght@0,400;0,700;1,400&family=Oswald:wght@300;500&display=swap");
 
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   /* font-family: 'Cabin Condensed', sans-serif;
