--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,6 +1,6 @@
   
   #contact {
-    background-color: #6a9ac4;
+    background-color: #202020;
     display: flex;
     justify-content: center;
     align-items: center;
